css/style.css
/* Clear browser margins and padding */

* { 

 margin:0; padding:0;

}



body {

 font-family: 'Helvetica', 'Arial', sans-serif;
 background: white;
 font-size: calc(12px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
 line-height: calc(1.8em + (2.5 - 1.8) * ((100vw - 300px)/(1600 - 300)));

 /* width:100%;*/ 
}

.container {

margin-top: 20px;

   
 

}

header {
background: #848C35;
display: flex;
flex-direction: column;
justify-content: center;
width: 100%;
height: 150px;
line-height: calc(2.1em + (2.9 - 2.1) * ((100vw - 300px)/(1600 - 300)));


}



#title {

color:white;
font-family: 'Varela Round', sans-serif;
align-self: center;
font-size: calc(36px + (50 - 36) * ((100vw - 300px) / (1600 - 300)));
}



h2{
  color:white;
  font-style: italic;
  align-self: center;
  margin-top: 10px;
  font-size: calc(18px + (32 - 18) * ((100vw - 300px) / (1600 - 300)));
  font-weight: 300;
}

.sub-info {
 display:flex;
 justify-content: center;
 flex-direction: column;
 height: 130px;
 

}

#description {
  text-align: center;
  align-self: center;
  color:#746955;
  font-size: calc(20px + (30 - 20) * ((100vw - 300px) / (1600 - 300)));
  font-weight: 900;

}

#other-description {
  text-align: center;
  align-self: center;
  color:#334949;
  font-family: 'Varela Round', sans-serif;
  font-size: calc(8px + (22 - 8) * ((100vw - 300px) / (1600 - 300)));


}

main {


position: relative;




}

main::after{
  content: "";
  background: url("https://raw.githubusercontent.com/carlosrbatalha/survey-saving-our-planet/master/img/earth1.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed; 
  opacity: 0.5;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;  

  }

  #survey-form {
font-family: 'Varela Round', sans-serif;
padding: 50px 50px 50px 50px;
display:flex;
justify-content: center;
 flex-direction: column;
  }

  .box-1, .box-2, .box-3 {
  background-color: rgba(255,255,255, 0.7);
  display: flex;
  align-items: center;
  height: 50px;


  }

  .box-1 {
padding-top: 10px;

  }

  .box-3 {

    padding-bottom: 10px;

  }


/* up and down arrows of from number field */

input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none; 
  margin: 0; 
}

  






  #name-label, #email-label, #number-label, #dropdown-label {
   margin-left: 20px;
   position: relative;

  }

  #name, #email, #number {

    width: 50%;
  padding: 10px 0 10px 5px;

  box-sizing: border-box;
  background-color: rgba(255,255,255, 0);
  border:none;
  margin: 0 10px 0 5px;
  cursor: pointer;




  }

input, textarea {
font-size: calc(9px + (21 - 9) * ((100vw - 300px) / (1600 - 300)));
color: #746955;

}



::placeholder { 
  
color: #746955;

font-size: calc(9px + (21 - 9) * ((100vw - 300px) / (1600 - 300)));

  }

  :-ms-input-placeholder { /* Internet Explorer 10-11 */
  color: #746955;

font-size: calc(9px + (21 - 9) * ((100vw - 300px) / (1600 - 300)));
}

::-ms-input-placeholder { /* Microsoft Edge */
 color: #746955;

font-size: calc(9px + (21 - 9) * ((100vw - 300px) / (1600 - 300)));
}



/* dropdown select style starts here */

.box-4 {
    margin-top: 20px;
    padding-top: 20px;
    padding-bottom: 30px;
  background-color: rgba(255,255,255, 0.7);
  display: flex;
  flex-direction: column;
  align-items: left;
  

  }



  /*#dropdown {
  width: 50%;
  padding: 10px 0 10px 5px;
  border: none;
  border-radius: 4px;
  background-color: #f1f1f1;
  margin: 10px 10px 0 20px;
  font-family: 'Varela Round', sans-serif;
  font-size: calc(9px + (21 - 9) * ((100vw - 300px) / (1600 - 300)));


  }*/



  .icon::before {
    display: inline-block;
    font-style: normal;
    font-variant: normal;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
  }

  .custom-select::after {
    font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f007";
  }

.custom-select {
    border: 1px solid #ccc;
    overflow: hidden; 
    height: 40px;    
    width: 240px;
    position: relative;
    
    margin-left: 20px;
    margin-top: 10px;
}

select{  
  
    font-family: 'Varela Round', sans-serif;     
    height: 40px;
    padding: 5px;
    border: 0;
       font-size: calc(9px + (21 - 9) * ((100vw - 300px) / (1600 - 300)));   
    width: 240px;
   -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    cursor: pointer;
    position: absolute;
}
.custom-select::after {
    content:"\f0d7";
    font-family: Font Awesome 5 Free;
    color: #000;
    padding:5px 25px;
    position: absolute; right: 0; top: 0;
    background: transparent;
    z-index: 1;
    text-align: center;
    width: 10%;
    height: 100%;      
    pointer-events: none;
    box-sizing: border-box;   
}





  fieldset {

    border: none;
  }


.box-5 {
   margin-top: 20px;

    background-color: rgba(255,255,255, 0.7);

    padding-bottom: 20px;


  }

  #check legend {

    margin-left: -20px;
    padding-top: 20px;
    position: relative;

  }


  #check  {
 
 
    
    display: flex;
    align-items: center;
    flex-direction: column;
    margin-left: 40px;


  }

  #check input {
    margin-top: 8px;
    margin-left: -20px;
    position: absolute;



  }

  #check label, #check input {

    cursor: pointer;
  }

#check span {

font-size: calc(6px + (18 - 6) * ((100vw - 300px) / (1600 - 300))); 
margin-left: 5px;

}
 



  .box-6 {

    margin-top: 20px;

    
    background-color: rgba(255,255,255, 0.7);
    
  padding-bottom: 20px;
  padding-top: 20px;
  position: relative;



  }



  #radiocheck legend {
    margin-left: -20px;
  }


  #radiocheck  {
    position: relative;
    display: flex;
    align-items: center;
    flex-direction: column;
    margin-left: 40px;
  }

  #radiocheck input {
    margin-top: 8px;
    position: absolute;
    margin-left: -20px;
  }

  #radiocheck input, #radiocheck label {

    cursor: pointer;
  }





  .box-7 {
  margin-top: 20px;
  padding-top: 20px;
  
  background-color: rgba(255,255,255, 0.7);
  display: flex;
  flex-direction: column;
  align-items: left;
  }


#text-area-label {
margin-left: 20px;

}

#text-area {


  width: 100%;
  padding: 10px 0 10px 20px;

  box-sizing: border-box;
  background-color: rgba(255,255,255, 0);
  border:none;
  
  cursor: pointer;
  resize: none;
}

#submit{
  background-color: rgba(255,255,255, 0.7);
  display: flex;
  justify-content: center;
  align-self: center;
  width: 100px;
  padding-bottom: 10px;
  padding-top:10px;

  margin-top: 20px;
  font-family: 'Varela Round', sans-serif;
  font-size: calc(9px + (21 - 9) * ((100vw - 300px) / (1600 - 300)));  
  cursor: pointer; 
}

#submit:hover{
  background-color: rgba(255,255,255, 1);

  }

  footer {
display:flex;
justify-content: center;
align-self: center;
margin-top: 20px;
margin-bottom: 20px;

  }

  footer a {

color: black;
font-size: calc(26px + (38 - 26) * ((100vw - 300px) / (1600 - 300))); 


  }



  /* ---- Overlay with popup --------------- Credit to CAPTAIN PEN - PURE CSS popup box -----------*/ 

  .overlay {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.7);
  transition: opacity 500ms;
  visibility: hidden;
  opacity: 0;
}

.overlay:target {
  visibility: visible;
  opacity: 1;
}

.popup {
  margin: 70px auto;
  padding: 20px;
  background: #fff;
  border-radius: 5px;
  width: 40%;
  position: relative;
  transition: all 5s ease-in-out;
}

.popup h2 {
  display:flex;
  flex-direction: row;
  justify-content: center;
  margin-top: 10px;
  color: #848C35;
  font-weight: bold;
  font-style:normal;
  font-size: calc(20px + (40 - 20) * ((100vw - 300px) / (1600 - 300))); 
  font-family: 'Varela Round', sans-serif;
  
}

#result, #quoteDisplayLow {
  display: flex;
  flex-direction: row;
  justify-content: center;
  color: #848C35;
  font-weight: bold;
  font-style:normal;
  font-size: calc(20px + (40 - 20) * ((100vw - 300px) / (1600 - 300))); 
  font-family: 'Varela Round', sans-serif;
  margin-top: 25px;

}

 #quoteDisplayLow {
  text-align: center;
  margin-left:30px;
  margin-right: 30px;
  line-height: 1.5;
  color: #5a4761;
  font-weight: bold;
  font-style:normal;
  font-size: calc(12px + (25 - 12) * ((100vw - 300px) / (1600 - 300))); 
  font-family: 'Varela Round', sans-serif;
  



}


.icones {
 
  display: flex;
  flex-direction: row;
  justify-content: center;
  
  padding: 20px 0px 10px 0px;


}

.ico {
fill: #848c35;

width: calc(26px + (36 - 26) * ((100vw - 300px) / (1600 - 300))); 
height: calc(26px + (36 - 26) * ((100vw - 300px) / (1600 - 300))); 

padding:5px;
cursor:pointer;

}

.ico:hover {

fill: #5a4761;

}

.twitterico {



}



.faceico {




}




.instangramico {


}



.mailico {



}






.popup .close {
  position: absolute;
  top: 20px;
  right: 25px;
  transition: all 200ms;
  font-size: calc(25px + (40 - 25) * ((100vw - 300px) / (1600 - 300))); 
  
  font-weight: bold;
  text-decoration: none;
  color: #848c35;
  
}

.popup .close:hover {
  color: #5a4761;
  cursor:pointer;
}


.popup .content {
  max-height: 30%;
  overflow: auto;
}


@media screen and (max-width: 700px){
  
  .popup{
    width: 70%;
  }
}



/* The End */


  


      






      

